<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingTop="0dp"
    android:paddingEnd="0dp"
    tools:context=".MainActivity">

    <!--Название раздела-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@color/green"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/Scedule"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="TODAY"
            app:srcCompat="@drawable/ic_calendar"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="ContextMenu"
            app:srcCompat="@drawable/ic_contextmenu"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_options"
            app:tint="@color/text" />

    </LinearLayout>
    <!--Нынешний месяц-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/blue"
        android:gravity="top"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="20dp"
            android:text="Февраль"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_marginEnd="4dp"
            android:text="Название недели" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:text="(12)" />
    </LinearLayout>
    <!--Дни недели-->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:background="@color/blue"
        android:gravity="top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:visibility="visible">

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="21" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="П" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="В" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/plus"
                android:gravity="center"
                android:text="С"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Ч" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="П" />
        </TableRow>
    </TableLayout>
    <!--Нижнее меню-->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:background="@color/green"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="2dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/ic_menu_item"
                android:backgroundTint="@color/blue"
                android:paddingStart="24dp"
                android:paddingTop="4dp"
                android:paddingEnd="24dp"
                android:paddingBottom="4dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_home"
                app:tint="@color/plus" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Расписание"
                android:textColor="@color/plus"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/imageButtonToCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/ic_menu_item"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="24dp"
                android:paddingTop="4dp"
                android:paddingEnd="24dp"
                android:paddingBottom="4dp"
                android:scaleType="fitCenter"
                android:onClick="toCalendar"
                app:srcCompat="@drawable/ic_calendar"
                app:tint="@color/text" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=" Календарь"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/ic_menu_item"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="24dp"
                android:paddingTop="4dp"
                android:paddingEnd="24dp"
                android:paddingBottom="4dp"
                android:scaleType="fitCenter"
                android:onClick="toHomeTasks"
                app:srcCompat="@drawable/ic_tasks"
                app:tint="@color/text" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="ДЗ"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/ic_menu_item"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="24dp"
                android:paddingTop="4dp"
                android:paddingEnd="24dp"
                android:paddingBottom="4dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_stat"
                app:tint="@color/text" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Статистика"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/ic_menu_item"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="24dp"
                android:paddingTop="4dp"
                android:paddingEnd="24dp"
                android:paddingBottom="4dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_list"
                app:tint="@color/text" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Списки"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/oval"
        android:contentDescription="@string/plus_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_plus"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textPustoeScedule"
        android:layout_width="208dp"
        android:layout_height="121dp"
        android:gravity="center"
        android:text="@string/scedule_infa"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/weekday1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:spanCount="5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/oval"
        android:clickable="true"
        android:foreground="@drawable/ic_plus"
        android:onClick="newClass"
        app:backgroundTint="@color/plus"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:srcCompat="@drawable/ic_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>